--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "react-time-ago": "^7.2.1",
+    "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
